bk_ida/gobmkida/c1/komaster_to_string
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/komaster_to_string/src/engine/board.c:929:8: error: use of undeclared identifier 'off_48E500'
return off_48E500[komaster]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/komaster_to_string/src/obj/1/board.o] Error 1
